# btor2-opt

./: LICENSE  README.md  __init__.py  btor2-miter.py  btor2-opt.py  pyproject.toml  requirements.txt  shell.nix
.github/workflows/: python-app.yml
src/: btormiter.py  parse.py  parser.py  passes.py  program.py
src/btoropt/: __init__.py  __main__.py  modparser.py  parser.py  program.py
src/btoropt/passes/: allpasses.py  genericpass.py
src/btoropt/passes/transforms/: applyContracts.py  initAllStates.py  renameInputs.py
src/btoropt/passes/validation/: checkLidOrdering.py
src/passes/: allpasses.py  genericpass.py  passes.py
src/passes/transforms/: initAllStates.py  renameInputs.py
src/passes/validation/: checkLidOrdering.py
tests/: test.py
tests/btor/: modular.btor
